--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Credenciamento ESESP</title>
 
     <!-- FAVICON DA PÁGINA -->
-    <link rel="shortcut icon" href="../assets/Imagens/Logo Esesp Colorida.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/Imagens/Logo Esesp Colorida.png" type="image/x-icon">
 
     <!-- LINK CSS DO BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!-- CSS PERSONALIZADO -->
-    <link rel="stylesheet" href="../assets/styles/inicio.css">
+    <link rel="stylesheet" href="assets/styles/inicio.css">
 
     <!-- FONTES GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +36,7 @@
 
                     <!-- ESQUERDA -->
                     <div class="col-3 d-flex align-items-center">
-                        <img class="logo-esesp" src="../assets/Imagens/Logo Esesp Colorida.png" alt="logo-esesp">
+                        <img class="logo-esesp" src=" assets/Imagens/Logo Esesp Colorida.png" alt="logo-esesp">
                     </div>
 
                     <!-- CENTRO -->
@@ -51,11 +51,11 @@
 
                         <div class="usuario-area d-flex align-items-center">
                             <div class="topo-notificacoes">
-                                <img class="ola-credenciado" src="../assets/Imagens/Olá Credenciado(a).png" alt="Usuário">
+                                <img class="ola-credenciado" src="assets/Imagens/Olá Credenciado(a).png" alt="Usuário">
                             </div>
 
                             <div class="usuario-wrapper" id="btn-usuario">
-                                <img class="seta-usuario mx-2" src="../assets/imagens/seta-baixo.svg" alt="Abrir menu">
+                                <img class="seta-usuario mx-2" src="assets/imagens/seta-baixo.svg" alt="Abrir menu">
                                 <span>Olá, Credenciado(a)</span>
                                 <div class="dropdown-usuario">
                                     <a href="#">Acompanhar processo</a>
@@ -116,7 +116,7 @@
                                 </p>
                                 <div class="edital-footer">
                                     <a class="btn-edital inscricap" href="#">
-                                        <img src="../assets/Imagens/inscricao-edital.png" alt="inscricao-edital">
+                                        <img src="assets/Imagens/inscricao-edital.png" alt="inscricao-edital">
                                         <span>Faça sua Inscrição</span>
                                     </a>
                                     <div>
@@ -142,7 +142,7 @@
                                 </p>
                                 <div class="edital-footer">
                                     <a class="btn-edital inscricap" href="#">
-                                        <img src="../assets/Imagens/inscricao-edital.png" alt="inscricao-edital">
+                                        <img src="assets/Imagens/inscricao-edital.png" alt="inscricao-edital">
                                         <span>Faça sua Inscrição</span>
                                     </a>
                                     <div>
@@ -168,7 +168,7 @@
                                 </p>
                                 <div class="edital-footer">
                                     <a class="btn-edital inscricap" href="#">
-                                        <img src="../assets/Imagens/inscricao-edital.png" alt="inscricao-edital">
+                                        <img src="assets/Imagens/inscricao-edital.png" alt="inscricao-edital">
                                         <span>Faça sua Inscrição</span>
                                     </a>
                                     <div>
@@ -194,7 +194,7 @@
                                 </p>
                                 <div class="edital-footer">
                                     <a class="btn-edital inscricap" href="#">
-                                        <img src="../assets/Imagens/inscricao-edital.png" alt="inscricao-edital">
+                                        <img src="assets/Imagens/inscricao-edital.png" alt="inscricao-edital">
                                         <span>Faça sua Inscrição</span>
                                     </a>
                                     <div>
@@ -220,7 +220,7 @@
                                 </p>
                                 <div class="edital-footer">
                                     <a class="btn-edital inscricap" href="#">
-                                        <img src="../assets/Imagens/inscricao-edital.png" alt="inscricao-edital">
+                                        <img src="assets/Imagens/inscricao-edital.png" alt="inscricao-edital">
                                         <span>Faça sua Inscrição</span>
                                     </a>
                                     <div>
@@ -259,7 +259,7 @@
                                 <p class="descricao-editais mb-0 d-flex align-items-center">
                                     Navegue pela nossa trilha de aprendizagem e escolha o eixo que se encaixa com a sua atuação profissional.
                                     <img class="seta-trilhas ml-3" id="seta-mestre"
-                                        src="../assets/imagens/seta-baixo.svg" alt="Abrir">
+                                        src="assets/imagens/seta-baixo.svg" alt="Abrir">
                                 </p>
                             </div>
                         </div>
@@ -929,7 +929,7 @@
                                 <p class="descricao-editais mb-0 d-flex align-items-center">
                                     Entenda melhor cada função
                                     <img class="seta-trilhas ml-3" id="seta-cargos"
-                                        src="../assets/imagens/seta-baixo.svg" alt="Abrir">
+                                        src="assets/imagens/seta-baixo.svg" alt="Abrir">
                                 </p>
                             </div>
                         </div>
@@ -1205,13 +1205,13 @@
                             <img class="logo-branca" src="../assets/Logo-01 ead.png" alt="EADESESP">
                         </a>
                         <a href="https://www.instagram.com/esespgoves/" target="_blank">
-                            <img src="../assets/imagens/instagram.png" alt="Instagram">
+                            <img src="assets/imagens/instagram.png" alt="Instagram">
                         </a>
                         <a href="https://www.youtube.com/@esespgoves" target="_blank">
-                            <img src="../assets/imagens/youtube.png" alt="YouTube">
+                            <img src="assets/imagens/youtube.png" alt="YouTube">
                         </a>
                         <a href="https://www.linkedin.com/company/esesp-es/?originalSubdomain=br" target="_blank">
-                            <img src="../assets/imagens/linkedin.png" alt="LinkedIn">
+                            <img src="assets/imagens/linkedin.png" alt="LinkedIn">
                         </a>
                     </div>
                 </div>
@@ -1244,6 +1244,7 @@
     crossorigin="anonymous"></script>
 
 <!-- JS PERSONALIZADO -->
-<script src="../assets/scripts/script.js"></script>
+<script src="assets/scripts/script.js"></script>
+
 
 </html>
