--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                     <!-- ESQUERDA -->
                     <div class="col-3 d-flex align-items-center">
-                        <img class="logo-esesp" src="../assets/Imagens/Logo Esesp Colorida.png" alt="logo-esesp">
+                        <img class="logo-esesp" src="assets/Imagens/Logo Esesp Colorida.png" alt="logo-esesp">
                     </div>
 
                     <!-- CENTRO -->
@@ -1247,3 +1247,4 @@
 <script src="assets/scripts/script.js"></script>
 
 </html>
+
