--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             </div>
 
                             <div class="usuario-wrapper" id="btn-usuario">
-                                <img class="seta-usuario mx-2" src="../assets/imagens/seta-baixo.svg" alt="Abrir menu">
+                                <img class="seta-usuario mx-2" src="assets/Imagens/seta-baixo.svg" alt="Abrir menu">
                                 <span>Olá, Credenciado(a)</span>
                                 <div class="dropdown-usuario">
                                     <a href="#">Acompanhar processo</a>
@@ -259,7 +259,7 @@
                                 <p class="descricao-editais mb-0 d-flex align-items-center">
                                     Navegue pela nossa trilha de aprendizagem e escolha o eixo que se encaixa com a sua atuação profissional.
                                     <img class="seta-trilhas ml-3" id="seta-mestre"
-                                        src="assets/imagens/seta-baixo.svg" alt="Abrir">
+                                        src="assets/Imagens/seta-baixo.svg" alt="Abrir">
                                 </p>
                             </div>
                         </div>
@@ -929,7 +929,7 @@
                                 <p class="descricao-editais mb-0 d-flex align-items-center">
                                     Entenda melhor cada função
                                     <img class="seta-trilhas ml-3" id="seta-cargos"
-                                        src="assets/imagens/seta-baixo.svg" alt="Abrir">
+                                        src="assets/Imagens/seta-baixo.svg" alt="Abrir">
                                 </p>
                             </div>
                         </div>
@@ -1202,16 +1202,16 @@
 
                     <div class="icones-redes ">
                         <a href="https://eadesesp.es.gov.br/moodle/?lang=en" target="_blank">
-                            <img class="logo-branca" src="../assets/Logo-01 ead.png" alt="EADESESP">
+                            <img class="logo-branca" src="assets/Logo-01 ead.png" alt="EADESESP">
                         </a>
                         <a href="https://www.instagram.com/esespgoves/" target="_blank">
-                            <img src="assets/imagens/instagram.png" alt="Instagram">
+                            <img src="assets/Imagens/instagram.png" alt="Instagram">
                         </a>
                         <a href="https://www.youtube.com/@esespgoves" target="_blank">
-                            <img src="assets/imagens/youtube.png" alt="YouTube">
+                            <img src="assets/Imagens/Youtube.png" alt="YouTube">
                         </a>
                         <a href="https://www.linkedin.com/company/esesp-es/?originalSubdomain=br" target="_blank">
-                            <img src="assets/imagens/linkedin.png" alt="LinkedIn">
+                            <img src="assets/Imagens/linkedin.png" alt="LinkedIn">
                         </a>
                     </div>
                 </div>
@@ -1244,7 +1244,8 @@
     crossorigin="anonymous"></script>
 
 <!-- JS PERSONALIZADO -->
-<script src="assets/scripts/script.js"></script>
+<script src="assets/styles/inicio.css"></script>
 
 </html>
+
 
