--- a/index.html
+++ b/index.html
@@ -1244,8 +1244,9 @@
     crossorigin="anonymous"></script>
 
 <!-- JS PERSONALIZADO -->
-<script src="assets/styles/inicio.css"></script>
+<script src="assets/scripts/script.js"></script>
 
 </html>
+
 
 
